# MouseTrap

./: Cargo.toml  index.html
.github/workflows/: release.yaml
assets/maps/: one.ldtk
crates/game_state/: Cargo.toml
crates/game_state/src/: lib.rs
plugins/actions/: Cargo.toml
plugins/actions/src/: lib.rs
plugins/assets/: Cargo.toml
plugins/assets/src/: lib.rs
plugins/mousetrap/: Cargo.toml
plugins/mousetrap/src/: audio.rs  lib.rs  menu.rs
plugins/player/: Cargo.toml
plugins/player/src/: lib.rs
src/: main.rs
