[package]
name = "mousetrap" # ToDo
version = "0.1.0"
publish = false
authors = ["Patrick Greene <patrickisgreene@protonmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 1

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "mousetrap_plugin/default"
]

native = [
    "bevy/bevy_wgpu",
    "mousetrap_plugin/native"
]

web = [
    "bevy_webgl2",
]

dev = [
    "bevy/dynamic",
    "native",
]

[dependencies]
bevy = { version = "0.5.0", default-features = false }
mousetrap_plugin = {path = "plugins/mousetrap"}
winit = "0.24.0"

bevy_webgl2 = {version = "0.5.0", optional = true}

[build-dependencies]
embed-resource = "1.4"
