[package]
name = "assets_plugin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game_state = { path = "../../crates/game_state" }
bevy_asset_loader = "0.2.1"
bevy = { version = "0.5.0", default-features = false }
bevy_kira_audio = { version = "0.5.1" }