[package]
name = "mousetrap_plugin"
version = "0.1.0"
publish = false
authors = ["Patrick Greene <patrickisgreene@protonmail.com>"]
edition = "2018"

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy_kira_audio/ogg"
]

native = [
    "bevy/bevy_wgpu",
]

[dependencies]
bevy_devtools = { git = "https://github.com/Bytebuddha/bevy_devtools" }
bevy = { version = "0.5.0", default-features = false }
bevy_kira_audio = { version = "0.5.1" }
bevy_asset_loader = "0.2.1"
rand = "0.8.3"
